--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -1,3 +1,5 @@
+version: '3'
+
 services:
   api:
     build: ./api
@@ -5,17 +7,20 @@ services:
     networks:
       - app-network
     expose:
-      - "8800" 
+      - "8800"
+    depends_on:
+      - mysql
     restart: unless-stopped
     environment:
-      - DB_HOST=mysql
+      - DB_HOST=mysql-container
       - DB_USER=sys_webapp
       - DB_PASSWORD=webappPassword
       - DB_NAME=webapp
       - PORT=3000
+    scale: 3
 
   front-nginx:
-    build: ./frontend  
+    build: ./frontend
     container_name: frontend-nginx-container
     volumes:
       - ./nginx-node.conf:/etc/nginx/conf.d/default.conf
@@ -24,7 +29,7 @@ services:
     networks:
       - app-network
     depends_on:
-      - api  
+      - api
     restart: unless-stopped
 
   mysql:
@@ -50,3 +55,4 @@ networks:
 
 volumes:
   mysql-data:
+
