--- a/docker-compose-swarm.yml
+++ b/docker-compose-swarm.yml
@@ -1,12 +1,13 @@
 version: '3.8'
 
 services:
-  api:
+  api-2:
     image: node-api
     networks:
       - app-network
     environment:
-      - DB_HOST=mysql
+      - DB_HOST=mysql-2
+      - DB_PORT=3302
       - DB_USER=sys_webapp
       - DB_PASSWORD=webappPassword
       - DB_NAME=webapp
@@ -16,12 +17,12 @@ services:
       restart_policy:
         condition: on-failure
 
-  front-nginx:
+  front-nginx-2:
     image: node-frontend-nginx
     volumes:
       - ./nginx-node.conf:/etc/nginx/conf.d/default.conf
     ports:
-      - "80:80"
+      - "82:80"
     networks:
       - app-network
     depends_on:
@@ -31,7 +32,7 @@ services:
       restart_policy:
         condition: on-failure
 
-  mysql:
+  mysql-2:
     image: mysql:5.7
     networks:
       - app-network
@@ -41,9 +42,9 @@ services:
       MYSQL_USER: sys_webapp
       MYSQL_PASSWORD: webappPassword
     ports:
-      - "3306:3306"
+      - "3302:3306"
     volumes:
-      - mysql-data:/var/lib/mysql
+      - mysql-data-2:/var/lib/mysql
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     deploy:
       replicas: 1
@@ -51,8 +52,8 @@ services:
         condition: on-failure
 
 networks:
-  app-network:
+  app-network-2:
     driver: overlay
 
 volumes:
-  mysql-data:
+  mysql-data-2:
