--- a/nginx-node.conf
+++ b/nginx-node.conf
@@ -9,7 +9,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://api:8800;  # Porta do backend Node.js
+        proxy_pass http://api-2:8802;  # Porta do backend Node.js
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
