--- a/docker-compose-swarm.yml
+++ b/docker-compose-swarm.yml
@@ -4,7 +4,7 @@ services:
   api-2:
     image: node-api
     networks:
-      - app-network
+      - app-network-2
     environment:
       - DB_HOST=mysql-2
       - DB_PORT=3302
@@ -24,7 +24,7 @@ services:
     ports:
       - "82:80"
     networks:
-      - app-network
+      - app-network-2
     depends_on:
       - api  
     deploy:
@@ -35,7 +35,7 @@ services:
   mysql-2:
     image: mysql:5.7
     networks:
-      - app-network
+      - app-network-2
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: webapp
