Ajustes do ambiente lab2

--- a/nginx-node.conf
+++ b/nginx-node.conf
@@ -1,5 +1,5 @@
 server {
-    listen 82;
+    listen 8080;
 
     root /usr/share/nginx/html;
     index index.html;
@@ -9,7 +9,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://api-2:8802;  # Porta do backend Node.js
+        proxy_pass http://api-2:8802;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
