--- a/docker-compose-swarm.yml
+++ b/docker-compose-swarm.yml
@@ -21,11 +21,11 @@ services:
     volumes:
       - ./nginx-node.conf:/etc/nginx/conf.d/default.conf
     ports:
-      - "82:82"
+      - "8080:8080"
     networks:
       - app-network-2
     depends_on:
-      - api  
+      - api-2
     deploy:
       replicas: 1
       restart_policy:
