--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,14 +12,6 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Ensure Swarm active
-        run: |
-          SWARM_STATUS=$(docker info --format '{{.Swarm.LocalNodeState}}')
-          echo "Current Swarm status: $SWARM_STATUS"
-          if [ "$SWARM_STATUS" != "active" ]; then
-            docker swarm init
-          fi
-
-      - name: Build Docker image
+      - name: Script
         run: |
           bash ./docker-swarm-deploy.sh
